all section complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
 
-    <!-- Navbar and Banner Section -->
+    <!-- Navbar and Banner Section (C) -->
     <header class="container mx-auto">
 
         <!-- navbar -->
@@ -148,7 +148,7 @@
 
     </header>
 
-    <!-- Coupon and ticket interface -->
+    <!-- Coupon and ticket interface (C) -->
     <main>
 
         <!-- Coupon Section -->
@@ -768,7 +768,7 @@
 
     </main>
 
-    <!-- Footer -->
+    <!-- Footer (C) -->
     <footer>
         <img class="w-full" src="images/footer.svg" alt="">
     </footer>
